[layer] [viewport] Fix duplicate scrollbars in overlay, on pages without overflow-x: hidden, on Firefox (discussion #790) (fixes #795)

--- a/src/unpoly/viewport.sass
+++ b/src/unpoly/viewport.sass
@@ -12,8 +12,10 @@ up-bounds
   outline-style: none !important
 
 body.up-scrollbar-away
-  &, html:has(>&)
+  html:has(>&)
+    // We cannot use `overflow-y: clip` here, as that would show duplicate scrollbars on Firefox (issue #795).
     overflow-y: hidden !important
+  &
     overflow-y: clip !important
 
   padding-right: calc(var(--up-scrollbar-width) + var(--up-original-padding-right)) !important
